# huhhb

./: .gitignore  AGENT.md  CLAUDE.md  CONTEXT.md  README.md  marketplace.json  pyproject.toml
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
.claude-plugin/hooks/: stop-hook.ps1  stop-hook.sh
.remember/: remember.md
docs/superpowers/plans/: 2026-04-16-uhh-memory.md
memory/: cli.py  config.py  layers.py  mcp_server.py  miner.py  nexus.py  storage.py
onboarding/: skills-list.md  welcome.md
skills/brainstorming/: SKILL.md
skills/memory/: SKILL.md
skills/memory-mine/: SKILL.md
skills/memory-search/: SKILL.md
skills/memory-status/: SKILL.md
skills/onboarding/: SKILL.md
skills/training/: SKILL.md
skills/uhh-memory/: SKILL.md
skills/uhh-memory-mine/: SKILL.md
skills/uhh-memory-search/: SKILL.md
skills/uhh-memory-status/: SKILL.md
skills/unga-bunga/: SKILL.md
skills/unga-bunga-commit/: SKILL.md
skills/unga-bunga-compress/: SKILL.md
skills/unga-bunga-help/: SKILL.md
skills/unga-bunga-review/: SKILL.md
tests/: conftest.py  test_cli.py  test_config.py  test_layers.py  test_layers_extra.py  test_mcp_server.py  test_mcp_server_extra.py  test_miner.py  test_palace.py  test_palace_extra.py  test_storage.py
uhh_memory/: cli.py  config.py  layers.py  mcp_server.py  miner.py  nexus.py  palace.py  storage.py
