[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uhh-memory"
version = "0.1.0"
description = "Uhstray.io AI memory system — local-first, semantic, hierarchical"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4.0"]

[project.scripts]
uhh-mem = "uhh_memory.cli:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
